--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,12 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.scss"
+                            "node_modules/bootstrap/scss/bootstrap.scss",
+                            "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/leaflet/dist/leaflet.css",
+                            "src/styles.scss",
+                            "src/assets/styles/app.scss"
                         ],
                         "scripts": []
                     },
