--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,10 @@
         "lib": [
             "ES2022",
             "dom"
-        ]
+        ],
+        "paths": {
+            "@/*": ["./src/*"]
+        }
     },
     "angularCompilerOptions": {
         "enableI18nLegacyMessageIdFormat": false,
