--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "bootstrap": "^5.2.3",
         "bootstrap-icons": "^1.10.3",
         "leaflet": "^1.9.3",
-        "lodash": "^4.17.21",
+        "lodash-es": "^4.17.21",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.12.0"
@@ -40,7 +40,7 @@
         "@types/geojson": "^7946.0.8",
         "@types/jasmine": "~4.3.0",
         "@types/leaflet": "^1.9.0",
-        "@types/lodash": "^4.14.197",
+        "@types/lodash-es": "^4.17.12",
         "jasmine-core": "~4.5.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.1.0",
