Add indicators of qoli dimensions to the filter

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "qoli-map",
     "version": "0.0.0",
+    "engines": {
+        "node": "18.17.0",
+        "npm": "9.6.7"
+    },
     "scripts": {
         "ng": "ng",
         "start": "ng serve --open --port 4210",
