--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
                             "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "node_modules/leaflet/dist/leaflet.css",
+                            "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
                             "src/styles.scss",
                             "src/assets/styles/app.scss"
                         ],
