Update the temporary config files

--- a/src/app/views/atlas/constants/qoli.config.json
+++ b/src/app/views/atlas/constants/qoli.config.json
@@ -199,6 +199,7 @@
         {
             "checked": true,
             "filename": "interactions",
+            "label": "Social Interactions",
             "aggregators": [
                 {
                     "checked": true,
@@ -368,7 +369,8 @@
                 },
                 {
                     "checked": true,
-                    "filename": "materialDeprivationRatio"
+                    "filename": "materialDeprivationRatio",
+                    "label": "Material Deprivation Ratio"
                 },
                 {
                     "checked": true,
