--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@angular/platform-browser-dynamic": "^15.1.0",
         "@angular/router": "^15.1.0",
         "@asymmetrik/ngx-leaflet": "^15.0.1",
+        "@fortawesome/fontawesome-free": "^6.5.1",
         "@ng-bootstrap/ng-bootstrap": "^14.0.1",
         "@ngx-translate/core": "^14.0.0",
         "@ngx-translate/http-loader": "^7.0.0",
