Update CHANGES.md & list of engines

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "qoli-map",
     "version": "2.1.0",
     "engines": {
-        "node": "18.17.0",
-        "npm": "9.6.7"
+        "node": "v16.20.2",
+        "npm": "8.19.4"
     },
     "scripts": {
         "ng": "ng",
