--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@popperjs/core": "^2.11.6",
         "bootstrap": "^5.2.3",
         "bootstrap-icons": "^1.10.3",
+        "chart.js": "^4.4.3",
         "leaflet": "^1.9.3",
         "lodash-es": "^4.17.21",
         "rxjs": "~7.8.0",
